--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/server.ts"
+    "start": "node dist/server.js",
+    "postinstall": "tsc && copyfiles -u 1 src/**/*.mustache dist/"
   },
   "repository": {
     "type": "git",
@@ -26,6 +30,7 @@
     "@types/express": "^4.17.13",
     "@types/mustache-express": "^1.2.1",
     "@types/node": "^17.0.14",
+    "copyfiles": "^2.4.1",
     "nodemon": "^2.0.15"
   }
 }
